--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,20 @@
 body { margin: 2em; display: flex; justify-content: center; }
 
-.sheet { font-size: 20px; width: 40em; display: flex; background-color: rgba(160, 160, 160, 0.15);  font-family: Fira Code, Menlo, Monaco, monospace; line-height: 1.5em; }
+.sheet { font-size: 16px; width: 48em; display: flex; border-radius: 6px; background-color: rgba(160, 160, 160, 0.15);  font-family: Fira Code, Menlo, Monaco, monospace; line-height: 2em; }
 
-.sheet textarea { display: block; font: inherit; border: 0; background: transparent; height: inherit; resize: none; }
+.sheet textarea { display: block; font: inherit; border: 0; background: transparent; height: inherit; resize: none; padding: 0 0 0 0.5em; }
 .sheet textarea:focus{ outline: none; }
 
-.margin { color: rgb(180, 180, 180); }
-.margin > div { height: 1.5em;  text-align: right; }
+.margin { color: rgb(200, 200, 200); padding-bottom: 2em; }
+.margin > div { text-align: right; }
 
-.output { background: rgba(160, 160, 160, 0.1); }
-.output > div { height: 1.5em; }
+.output { border-radius: 0 6px 6px 0; background: rgba(160, 160, 160, 0.1); }
+
+.margin > div,
+.output > div { height: 2em; padding: 0 1.25em; }
 
 .input,
-.output { width: 50%; white-space: nowrap; overflow-x: auto; overflow-y: hidden; padding: 0.25em 0; }
-
-.margin,
-.output { padding: 0.25em 1em 1.5em; }
+.output { width: 50%; white-space: nowrap; overflow-x: auto; overflow-y: hidden; }
 
 .error { color: rgb(240, 0, 80); background-color: rgba(240, 0, 80, 0.05); }
 .dim { color: rgb(140, 140, 140); }
